# sw_usb_audio

./: Jenkinsfile  deps.cmake
app_usb_aud_xk_316_mc_dsp/: CMakeLists.txt
app_usb_aud_xk_316_mc_dsp/src/core/: xua_conf.h
app_usb_aud_xk_316_mc_dsp/src/extensions/: user_main.h
app_usb_aud_xk_evk_xu316_dsp/: .gitignore  CMakeLists.txt  build_utils.py  dsp_design.ipynb  requirements.txt
app_usb_aud_xk_evk_xu316_dsp/dsp_ultra/: pyproject.toml
app_usb_aud_xk_evk_xu316_dsp/dsp_ultra/dsp_ultra/design/: pipeline.py
app_usb_aud_xk_evk_xu316_dsp/dsp_ultra/dsp_ultra/stages/: agc.py  parametric_eq.py
app_usb_aud_xk_evk_xu316_dsp/host_cmd_map/: CMakeLists.txt  command_map.cpp
app_usb_aud_xk_evk_xu316_dsp/src/: agc.c  agc.h  app_dsp.c  autogen_main.inc  dsp_device_control.h  dspt_control.c  dspt_control.h  dspt_filter_module.c  dspt_filter_module.h  dspt_main.c  dspt_main.h  dspt_module.c  dspt_module.h  dspt_parametric_eq.c  dspt_parametric_eq.h  dspt_usb.c  parametric_eq.c  parametric_eq.h  vendorrequests.c
app_usb_aud_xk_evk_xu316_dsp/src/core/: user_main.h  xua_conf.h
app_usb_aud_xk_evk_xu316_dsp/src/extensions/: audiohw.xc
app_usb_aud_xk_evk_xu316_dsp/src/python/: parse_config.py
app_usb_aud_xk_evk_xu316_dsp/src/templates/: cmd_offsets_h.mako  command_map_c.mako  command_map_offsets_c.mako  gen_command_map_offsets_c.mako  host_cmd_map.mako  struct_def_h.mako  struct_offsets_c.mako
app_usb_aud_xk_evk_xu316_dsp/src/yaml/: agc.yaml  biquads_4_sections.yaml  parametric_eq.yaml
host_cmd_map/: CMakeLists.txt
