[build-system]
requires = ['flit_core>=3.7']
build-backend = 'flit_core.buildapi'

[project]
name = 'dsp_ultra'
description = ''
version = '0.0.1'
dependencies = [
    'numpy',
    'matplotlib',
    'IPyWidgets',
    'graphviz',
    'IPython',
    'scipy',
    'pyyaml',
]

[project.optional-dependencies]
test = [
    "pytest",
]
